# MyAITutor

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py
src/: main.cpp
src/app/: Application.cpp  Application.h  CreateCurriculumUseCase.cpp  CreateCurriculumUseCase.h  VirtualUserInterface.cpp  VirtualUserInterface.h
src/core/: DataModels.h  PromptRegistry.cpp  PromptRegistry.h
src/infrastructure/: GeminiParser.cpp  GeminiParser.h  GeminiService.cpp  GeminiService.h  SQLiteManager.cpp  SQLiteManager.h
src/interfaces/: IDatabaseManager.h  ILLMService.h  IUserInterface.h
src/process/: CurriculumGenerationProcess.cpp  CurriculumGenerationProcess.h  IAgent.h  IGenerativeProcess.h
tests/: test_main.cpp
